Fixed a bug with logo overlapping the editor

--- a/infotv/frontend/styles/ropecon/less/editor.less
+++ b/infotv/frontend/styles/ropecon/less/editor.less
@@ -4,6 +4,7 @@
     top: 0;
     width: 350px;
     background: #000;
+    z-index: 1001;
     opacity: 0.3;
     &:hover {
         opacity: 1;
